Bug 83541 - TOOLBAR: Color icons need to be refreshed after theme change
Summary: TOOLBAR: Color icons need to be refreshed after theme change
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: Other All
: medium normal
Assignee: Maxim Monastirsky
URL:
Whiteboard: target:5.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-09-05 17:35 UTC by Yousuf Philips (jay) (retired)
Modified: 2016-10-25 19:24 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
shows the purple background isnt set in toolbar, but is in sidebar after theme change (24.36 KB, image/png)
2014-09-05 17:35 UTC, Yousuf Philips (jay) (retired)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-09-05 17:35:13 UTC
Created attachment 105818 [details]
shows the purple background isnt set in toolbar, but is in sidebar after theme change

When switching from one theme (e.g. tango) to another (e.g. sifr), the 3 color icons in the toolbar need to be refreshed, so they show the correctly selected colors.
Comment 1 A (Andy) 2014-09-05 20:45:14 UTC
reproducible with LO 4.3.1.2 (Win 8.1) with the following steps:

1. Open WRITER with the theme SIFR (-> TOOLS -> OPTIONS -> LIBREOFFICE -> VIEW -> section USER INTERFACE)
2. Change the BACKGROUND COLOR in the toolbar at the top to another colour
3. Go to TOOLS -> OPTIONS -> LIBREOFFICE -> VIEW -> section USER INTERFACE and change to TANGO

Result: BACKGROUND COLOUR icon in the sidebar shows the new background colour, but the corresponding icon in the toolbar at the top shows no colour
Comment 2 Commit Notification 2015-07-06 19:51:37 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=064481201341d92af2ec1387bb53a9c4b480217f

tdf#83541 Redraw the last used color after theme change

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2015-07-10 13:48:46 UTC
Maxim Monastirsky committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3dc95e2d1fce543ef2981c9743161da6c4cfc291

tdf#83541 Fix also for reportdesign

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.